src2/objects/NES_MachineClusterRelation__c.object
<CustomObject>
    <fields>
        <fullName>NES_Asset__c</fullName>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipName>Machine_Cluster_Relations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>NES_Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NES_MachineCluster__c</fullName>
        <label>Asset Cluster</label>
        <referenceTo>NES_MachineCluster__c</referenceTo>
        <relationshipName>Machine_Cluster_Relations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Asset Cluster Relation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MCR-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Cluster Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>